--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="form-input">
                 <div class="form-row">
                     <label for="title">Title</label>
-                    <input type="text" name="title" id="title">
+                    <input type="text" name="title" id="title" required>
                 </div>
                 <div class="form-row">
                     <label for="genre">Genre</label>
